User 엔티티에 follower와 following 관계 추가, follow 추천 엔드포인트와 서비스 추가

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
+PORT=
+
+# in milliseconds
+ACCESS_TOKEN_EXPIRES_IN=
 ACCESS_TOKEN_SECRET=
 
 
 # in milliseconds
-ACCESS_TOKEN_EXPIRES_IN=
-
+REFRESH_TOKEN_EXPIRES_IN=
 REFRESH_TOKEN_SECRET=
-
-# in milliseconds
-REFRESH_TOKEN_EXPIRES_IN
