--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-PORT=
+PORT=5000
 
-# in milliseconds
-ACCESS_TOKEN_EXPIRES_IN=
-ACCESS_TOKEN_SECRET=
+# 10 minutes in milliseconds
+ACCESS_TOKEN_EXPIRES_IN=600000
+ACCESS_TOKEN_SECRET=<YOUR_KEY_HERE>
 
-
-# in milliseconds
-REFRESH_TOKEN_EXPIRES_IN=
-REFRESH_TOKEN_SECRET=
+# 10 days in milliseconds
+REFRESH_TOKEN_EXPIRES_IN=864000000 
+REFRESH_TOKEN_SECRET=<YOUR_KEY_HERE>
